592067:TISSQAUAT-730:Alignment issue in A+ content images fix

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
@@ -58058,6 +58058,7 @@ header > .content .top.header_fix .toggle{
 	margin-bottom: 1px;
     background: #f5f5f5;	/* TISQAUAT-694 revert*/
     float: left;
+    width: 100%;
 }
 .Manufacturer.Temp03 .media-content{
 	width: 66.85%;
